# Facial-Detection-Security-System

./: CMakeLists.txt  install_opencv.sh  main.cpp  readme.md
UI/: addnewuser.cpp  addnewuser.h  addnewuser.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
cameraConfig/: camera.cpp  main.cpp
classifiers/: haarcascade_eye.xml
demo/: subscriptionExample.cpp  subscriptionExample.h
facial_rec/: FaceRecognizer.cpp  FaceRecognizer.h
facial_rec/camera/: Camera.cpp  Camera.h
facial_rec/database/: Database.cpp  Database.h  KnownPerson.cpp  KnownPerson.h  UnknownPerson.cpp  UnknownPerson.h
facial_rec/facial_detc/: FaceDetection.cpp  FaceDetection.h
screenshots/: SaveScreenshot.cpp  SaveScreenshot.h
twilio/: Message.cpp  Message.h  cpp_demo.cpp  notification.cpp  notification.h  twilio.cpp  twilio.h  type_conversion.h
